namespace ChallengingTheObjectOrientedMindset 
{
    public class Cash //: FixedMoney
    {

    }
}