namespace ChallengingTheObjectOrientedMindset {
    public class Wallet {

    }
}